entities description pages have been added
