# handlers/intervention.js
@@ -1,23 +1,23 @@
 'use strict';
 
 const Boom = require('boom');
-const trials = require('../agents/trials');
+const interventions = require('../agents/interventions');
 
-function trialsDetails(request, reply) {
-  const trialId = request.params.id;
+function interventionsDetails(request, reply) {
+  const interventionId = request.params.id;
 
-  trials.get(trialId).then((_trial) => {
-    reply.view('trials-details', {
-      title: _trial.public_title,
-      trial: _trial,
+  interventions.get(interventionId).then((_intervention) => {
+    reply.view('interventions-details', {
+      title: _intervention.name,
+      intervention: _intervention,
     });
   }).catch((err) => {
     if (err.status === 404) {
-      reply(Boom.notFound('Trial not found.', err));
+      reply(Boom.notFound('Intervention not found.', err));
     } else {
       reply(Boom.badGateway('Error accessing OpenTrials API.', err));
     }
   });
 }
 
-module.exports = trialsDetails;
+module.exports = interventionsDetails;
