# handlers/person.js
@@ -1,23 +1,23 @@
 'use strict';
 
 const Boom = require('boom');
-const trials = require('../agents/trials');
+const persons = require('../agents/persons');
 
-function trialsDetails(request, reply) {
-  const trialId = request.params.id;
+function personsDetails(request, reply) {
+  const personId = request.params.id;
 
-  trials.get(trialId).then((_trial) => {
-    reply.view('trials-details', {
-      title: _trial.public_title,
-      trial: _trial,
+  persons.get(personId).then((_person) => {
+    reply.view('persons-details', {
+      title: _person.name,
+      person: _person,
     });
   }).catch((err) => {
     if (err.status === 404) {
-      reply(Boom.notFound('Trial not found.', err));
+      reply(Boom.notFound('Person not found.', err));
     } else {
       reply(Boom.badGateway('Error accessing OpenTrials API.', err));
     }
   });
 }
 
-module.exports = trialsDetails;
+module.exports = personsDetails;
