# test/fixtures/api/swagger.yaml
@@ -76,6 +76,121 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
 
+  /persons/{id}:
+    x-swagger-router-controller: persons
+    get:
+      tags:
+        - persons
+      description: Returns person details
+      # used as the method name of the controller
+      operationId: get
+      parameters:
+        - name: id
+          in: path
+          description: ID of the person
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/Person"
+        # responses may fall through to errors
+        "404":
+          description: Person not found
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
+
+  /problems/{id}:
+    x-swagger-router-controller: problems
+    get:
+      tags:
+        - problems
+      description: Returns problem details
+      # used as the method name of the controller
+      operationId: get
+      parameters:
+        - name: id
+          in: path
+          description: ID of the problem
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/Problem"
+        # responses may fall through to errors
+        "404":
+          description: Problem not found
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
+  /organisations/{id}:
+    x-swagger-router-controller: organisations
+    get:
+      tags:
+        - organisations
+      description: Returns organisation details
+      # used as the method name of the controller
+      operationId: get
+      parameters:
+        - name: id
+          in: path
+          description: ID of the organisation
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/Organisation"
+        # responses may fall through to errors
+        "404":
+          description: Organisation not found
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
+
+  /interventions/{id}:
+    x-swagger-router-controller: interventions
+    get:
+      tags:
+        - interventions
+      description: Returns intervention details
+      # used as the method name of the controller
+      operationId: get
+      parameters:
+        - name: id
+          in: path
+          description: ID of the intervention
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/Intervention"
+        # responses may fall through to errors
+        "404":
+          description: Intervention not found
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
+
   /locations:
     x-swagger-router-controller: locations
     get:
